# hyprswitch

./: Cargo.toml  README.md  deploy.sh  rustfmt.toml
src/: commands.rs  config.rs  main.rs  main.rs.bak
src/commands/: exec.rs  hyprctl.rs
src/config/: action.rs  alias.rs
src/types/: config.rs  mod.rs  prog.rs
