[package]
name = "hyprswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
home = "0.5.5"
serde = "1.0.177"
serde_derive = "1.0.177"
serde_json = "1.0.104"
strum = "0.25.0"
strum_macros = "0.25.1"
