[package]
name = "hyprswitch"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/hiszd/hyprswitch"
license = "MIT"
description = "A tool for executing commands when monitors are connected, or removed in Hyprland."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
home = "0.5.5"
human_regex = "0.3.0"
serde = "1.0.177"
serde_derive = "1.0.177"
serde_json = "1.0.104"
strum = "0.25.0"
strum_macros = "0.25.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
